Se agregan las funcionalidades del resto de entidades y se configura el dockerfile y el AWS